tests/errors/named-borrow-assign-source.ari
fn main() -> i64 {
  var number = 7;
  let shared = ref number;
  number = 8;
  return 0;
}
